src/main/java/com/example/demo/errors/response/ErrorResponse.java
package com.example.demo.errors.response;

import lombok.Builder;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@Builder
@RequiredArgsConstructor
public class ErrorResponse {

    private final String status;
    private final Integer code;
    private final String message;

}
